# llm-council-workflow

./: .env.example  .gitignore  LICENSE  README.md  start_app.sh
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  events.py  google_gemini.py  main.py  model_gateway.py  runtime.py  schemas.py  settings.py  storage.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/builder/: page.tsx
frontend/components/: council-builder.tsx  council-console.tsx  markdown-block.tsx
frontend/lib/: api.ts  types.ts
