[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "council-backend"
version = "0.1.0"
description = "LangGraph-powered council chatbot backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "google-auth>=2.38.0",
  "langgraph>=1.0.0",
  "litellm>=1.52.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
